--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ input[type=text] {
   border:2px solid #ccc; 
   -webkit-border-radius: 5px;
   border-radius: 5px;
+  font-size: 1em;
 }
 
 input[type=text]:focus {
@@ -89,6 +90,7 @@ textarea {
   -webkit-border-radius: 5px;
   border-radius: 5px;
   font-family: Arial,Helvetica,Geneva,Sans-serif,sans-serif;
+  font-size: 1em;
 }
 
 textarea:focus {
@@ -102,6 +104,7 @@ select {
   -webkit-border-radius: 5px;
   border-radius: 5px;
   font-family: Arial,Helvetica,Geneva,Sans-serif,sans-serif;
+  font-size: 1em;
 }
 
 select:focus {
@@ -109,7 +112,7 @@ select:focus {
 }
 
 input[type=submit] {
-  padding:5px 15px; 
+  padding:3px 15px; 
   background:#eeeeee; 
   margin-right: 10px;
   border:1 none;
@@ -117,5 +120,6 @@ input[type=submit] {
   -webkit-border-radius: 5px;
   border-radius: 5px; 
   min-width:80px;
+  font-size: 1em;
 }
 
